<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dm2.examen.Main">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button android:id="@+id/btn1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="actividad1"
            android:text="@string/actividad1"/>

        <Button android:id="@+id/btn2"
            android:layout_below="@+id/btn1"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="actividad2"
            android:text="@string/actividad2"/>

        <Button android:id="@+id/btn3"
            android:layout_below="@+id/btn2"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="actividad3"
            android:text="@string/actividad3"/>

        <Button android:id="@+id/btn4"
            android:layout_below="@+id/btn3"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="actividad4"
            android:text="@string/actividad4"/>

        <Button android:id="@+id/btnSalir"
            android:layout_below="@+id/btn4"
            android:layout_marginTop="100dp"
            android:layout_marginStart="100dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="salir"
            android:text="@string/salir"/>
    </RelativeLayout>

</RelativeLayout>
